# python-molecule_project

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: main.yml
cpp_module/: .pre-commit-config.yaml  CMakeLists.txt  atom.cpp  bindings.cpp  setup.py  test_cpp_module.ipynb
docs/source/: conf.py
molecules/: __init__.py  atom.py  geometry.py  io.py  molecule.py  visualize.py
source/: index.rst
tests/: test_atom.py  test_io.py  test_molecule.py
